--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgmin": "^3.0.0",
     "gulp-svgstore": "^7.0.1",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp.spritesmith": "^6.11.0",
     "husky": "^4.2.3",
     "jstransformer-markdown-it": "^2.0.0",
